Stream in try with resources