@@ -7,9 +7,9 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.constraints.NotBlank;
@@ -17,6 +17,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.stream.Stream;
 
 /**
  * The type Api mock Response.
@@ -28,7 +29,7 @@ public class ApiMockResponse {
     private static final Logger LOG = LoggerFactory.getLogger(ApiMockResponse.class);
 
     @Value("${path.mock.response}")
-    private String PathMockResponse;
+    private String pathMockResponse;
 
     /**
      * Gets file
@@ -36,24 +37,26 @@ public class ApiMockResponse {
      * @param filename the filename
      * @return the headers
      */
-    @RequestMapping(value = "/{filename}", method = {RequestMethod.GET}, produces = "application/json")
+    @GetMapping(value = "/{filename}", produces = "application/json")
     @Operation(summary = "get header informations")
     public ResponseEntity<String> getContentFile(@NotBlank @PathVariable String filename) throws IOException {
-        LOG.debug("Get File {}/{}", PathMockResponse, filename);
-        return Files.list(Path.of(PathMockResponse))
-                .filter(f -> !f.toFile().isDirectory())
-                .filter(f -> f.toFile().getName().equals(filename))
-                .map(file -> {
-                    try {
-                        return Files.readString(Paths.get(file.toUri()));
-                    } catch (IOException e) {
-                        LOG.error("Cannot read file {}", file.getFileName());
-                        return null;
-                    }
-                })
-                .findFirst()
-                .map(r -> new ResponseEntity<>(r, HttpStatus.OK))
-                .orElse(new ResponseEntity<>(String.format("{\"Error\":\"No file %s/%s found\"}", PathMockResponse, filename), HttpStatus.NOT_FOUND));
+        LOG.debug("Get File {}/{}", pathMockResponse, filename);
+        try (Stream<Path> files = Files.list(Path.of(pathMockResponse))) {
+            return files
+                    .filter(f -> !f.toFile().isDirectory())
+                    .filter(f -> f.toFile().getName().equals(filename))
+                    .map(file -> {
+                        try {
+                            return Files.readString(Paths.get(file.toUri()));
+                        } catch (IOException e) {
+                            LOG.error("Cannot read file {}", file.getFileName());
+                            return null;
+                        }
+                    })
+                    .findFirst()
+                    .map(r -> new ResponseEntity<>(r, HttpStatus.OK))
+                    .orElse(new ResponseEntity<>(String.format("{\"Error\":\"No file %s/%s found\"}", pathMockResponse, filename), HttpStatus.NOT_FOUND));
+        }
     }
 
 }
